# systrument

./: Cargo.toml  README.md
src/: event.rs  lib.rs  main.rs  otel.rs  perfetto.rs  strace.rs  utils.rs
src/strace/: analyzer.rs  emitter.rs  parser.rs
tests/: strace_parser.rs
