[package]
name = "systrument"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
blame-on = { git = "https://github.com/kylewlacy/blame-on.git", features = ["miette"] }
bstr = "1.12.0"
chumsky = "1.0.0-alpha.8"
jiff = "0.2.15"
libc = "0.2.175"
miette = { version = "7.6.0", features = ["fancy"] }
perfetto_protos = "0.51.1"
protobuf = "3.7.2"
rand = "0.9.2"
thiserror = "2.0.16"
